enterprise-chaos-hub/faults/kubernetes/fs-fill/k8s-fault.yaml
---
apiVersion: litmuschaos.io/v1alpha1
kind: K8sFault
metadata:
  name: fs-fill
spec:
  definition:
    targets:
      appinfo:
        applabel: ""
        appkind: ""
        appns: ""
    chaos:
      experiment: fs-fill
      serviceAccountName: litmus-admin
      image: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0
      imagePullPolicy: Always
      env:
        - name: TOTAL_CHAOS_DURATION
          value: "60" # in seconds

        # space to be filled in bytes
        # or specify the size in 'K', 'KB', 'M', 'MB', 'G', 'GB'
        - name: FILL_SIZE
          value: "100M"

        # specify the path to fill
        - name: FILE_PATH
          value: "/tmp"

        ## Percentage of total pods to target
        - name: POD_AFFECTED_PERCENTAGE
          value: ""

        ## provide the cluster runtime
        - name: CONTAINER_RUNTIME
          value: "containerd"

        # provide the socket file path
        - name: SOCKET_PATH
          value: "/run/containerd/containerd.sock"

        - name: LIB_IMAGE
          value: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0

        ## Period to wait before and after injection of chaos in sec
        - name: RAMP_TIME
          value: ""

        - name: TARGET_CONTAINER
          value: ""

        - name: TARGET_PODS
          value: ""

        # To select pods on specific node(s)
        - name: NODE_LABEL
          value: ""

        ## it defines the sequence of chaos execution for multiple target pods
        ## supported values: serial, parallel
        - name: SEQUENCE
          value: "parallel"
